--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "cd client && yarn install && yarn build"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "4.17.1",
     "express-formidable": "^1.2.0",
+    "express-session": "1.17.0",
+    "formidable": "^1.2.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.16",
     "multer": "^1.4.2",
+    "passport": "0.4.0",
+    "passport-google-oauth20": "2.0.0",
     "path": "^0.12.7",
     "uniqid": "^5.2.0"
   }
